fixed code smells and bugs